tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__DataAccessHatche-AAAAAAAAAAAAAAAAAAAG-w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1787,
  "prerequisites": [
    1412
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So, if you want to do more than one recipe in your Assline, you want a Data Access Hatch. There are 3+1 versions.\n\nData Access Hatch: It holds 4 data sticks, so 4 recipes.\n\nAdvanced Data Access Hatch: It holds 16 data sticks. Ironically, you can make this right away.\n\nAutomatable Data Access Hatch: It's UV, but it allows I/O of the sticks. Skip it.\n\nThe Data Bank Multi: Can be connected to multiple Asslines, and can contain more than 1 DAH. This is the best way, when you can do it. Look in ZPM for the quest.\n\n[note]You only need to make one.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lData Access Hatches",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1412
  ],
  "rewards": [],
  "tasks": []
}
