tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__DiggingDeepforWa-jreOZVXRQa2sGXViV7-3Gg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6183795976113731354,
  "prerequisites": [
    75,
    3513441395399994532
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Is the Water Tank not cutting it anymore? Have you set up in a dry biome and are in desperate need of more water? Fear not, for the Steam Water Pump can solve your issues! This Multiblock is able to produce large amounts of Water if fed with Steam (1500L/s).\n\nLike other Steam Multiblocks, it can be upgraded by using Steel Frame Boxes instead of Bronze ones, which doubles the Water output at no additional Steam cost.\n\n§4It is, however, still dependent on how humid the Biome you are in is, so keep that in mind.§r\n\n§9Hint: You can find small lead ore in the Nether!§r\n\n[note]P.S. The optional quest item count includes the cost for the controller. [/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDigging Deep for Water",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    75,
    3513441395399994532
  ],
  "rewards": [],
  "tasks": []
}
