tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__DissolutionTank-AAAAAAAAAAAAAAAAAAAL4g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3042,
  "prerequisites": [
    3041,
    1406
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Basically a mixing machine purposely made for dilution.\n\nYou'll need to take care in providing the inputs at the required ratios, else you'll get no output.\n\nAnyway, this plays a large part in the lanthanide line so craft it up.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDissolution Tank",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3041,
    1406
  ],
  "rewards": [],
  "tasks": []
}
