tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__DronearenotDrone-prKPwVNgSgOE1NGPiEEF-g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6007883281943561722,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...but they can be as industrious as bees. These new electric friends are great companions for Multiblock machines: maintenance, control, management—they can do it all.\n\n§lThe Drone Centre is a newly designed machine. It doesn't need power; just put a drone into it and it will start running.\nOnce running, the drone will automatically scan for a '§lDrone Downlink Module§r' (replacing maintenance hatches on Multiblock machines) within a certain range and attempt to establish a connection with the host. If successful, you can remotely control this Multiblock machine from the Drone Centre GUI! Additionally, you can rename the machine for easier identification.\n\n[note]You can rename it either by right-clicking the Drone Downlink Module or in the Drone Centre GUI.[/note]\n\nPlacing more advanced drones will increase the range of the Drone Centre, with no limit on the amount of drones.\n\n[warn]Notice that drones may crash during operation—the probability decreases from Tier 1 to Tier 3, and Tier 3 Anti-Gravity Drones never crash.\nBesides, If the machine host is too far from the Drone Centre, the GUI remote control function will be disabled, but the turn-on/off-all-button and maintenance functions will still work.[/warn]\n§6§l\nMaybe one day, our drone can control machines on other planets...drive engine online!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDrone are not Drones!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
