tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__EBFInfo-AAAAAAAAAAAAAAAAAAAEmw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1179,
  "prerequisites": [
    103,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can use a scanner to manually check how your EBF works, or you can make an information panel from nuclear control and always see the status. Make a GT sensor kit and use it on the EBF controller. Place the sensor card in your info panel. Enable it with a redstone signal.\n\nThe GregTech sensor card can monitor GregTech machines like the EBF, Turbines, and Pyrolyse ovens. This is handy for keeping an eye on maintenance issues for multiblocks.\n\nIf you want to put the panels far from the machines they are monitoring, you will need range upgrades.\n\n[note]There's also a more advanced version.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lEBF Info",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    103,
    77
  ],
  "rewards": [],
  "tasks": []
}
