tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__EBFTime-AAAAAAAAAAAAAAAAAAAATQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 77,
  "prerequisites": [
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to get aluminium ingots, you need an Electric Blast Furnace. It's another very important step towards victory, so let's get started.\n\nGetting the Mica for the heating coils might be a little tricky, but you can use a substitute for the first tier of coils.\nYou need 2 LV hatches with 4A of 32V total, or 3 LV hatches with MOOOORE power if the multiblock is not fully repaired.\nIn order to not scrape by for Nickel, check out the quest Source of Nickel in the Novice Thaumaturgy tab.\n\nA few recipes produce CO2/SO2 as a fluid. This fluid can be collected by placing a fluid output hatch on the top layer of the EBF. You could also enable fluid voiding in the EBF controller block GUI. For recipes with such a C02/S02 output you must do one or the other or the EBF will not start.\nThe amount of fluid recovered depends on the tier of the muffler hatch.\n\nBart's Platinum Series recipes output fluids on the BOTTOM and are NOT affected by the muffler hatch tier, so if you want to do Platinum Stuff later, remember that.\n\nBefore the launch, don't forget to fix maintenance issues and put a programmed circuit if necessary.\n\nIf you want a really fancy EBF, you can add more input fluid hatches and store different fluids in each one.\n\nThe EBF also has a heat adjustment of 100K for each power tier above or below MV. You can only make LV energy hatches right now, but installing two LV energy hatches will overclock the EBF to MV power, eliminating the 100K penalty and setting the initial heat to 1801K.\n\nAs you upgrade your EBF over the course of the game, this heat adjustment will increase. Two MV energy hatches (overclocking to HV) will add +100K, two HV energy hatches (overclocking to EV) will give +200K, and so on. Coils only set the base value. This adjustment does not apply to the Volcanus.\n\nIf the pollution gets really bad, check in GT++ Multiblocks for a pollution scrubber, or upgrade your Muffler.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lEBF-Time",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88
  ],
  "rewards": [],
  "tasks": []
}
